# Deep-Drive-APEX

./: .gitignore  README.md  recognition_tour_diagnostic_report.md
.venv_lidar/: pyvenv.cfg
APEX/: README.md  run_apex.sh  run_apex_fixed_map_pc.sh  run_apex_recognition_live_pc.sh  run_apex_rviz_pc.sh
APEX/analysis/: lidar_static_posicion_x.json  lidar_static_posicion_x_right_positive.json  lidar_static_posicion_x_v2.csv  lidar_static_posicion_x_v2.json
APEX/docker/: Dockerfile  (+1 more)
APEX/ros2_ws/src/apex_telemetry/: package.xml  setup.cfg  setup.py
APEX/ros2_ws/src/apex_telemetry/apex_telemetry/: __init__.py  actuation.py  hardware_pwm.py  imu_lidar_planar_fusion_node.py  kinematics_estimator_node.py  kinematics_odometry_node.py  lidar_pose_bridge.py  lidar_relative_odometry_node.py  lidar_scan_buffer.py  nano_accel_serial_node.py  recon_mapping_node.py  recon_navigation.py  rplidar_publisher_node.py
APEX/ros2_ws/src/apex_telemetry/apex_telemetry/actuation/: __init__.py  actuation.py  cmd_vel_to_apex_actuation_node.py  hardware_pwm.py
APEX/ros2_ws/src/apex_telemetry/apex_telemetry/control/: __init__.py  curve_path_tracker_node.py  recognition_session_manager_node.py  recognition_tour_tracker_node.py  windows_gamepad_bridge_node.py
APEX/ros2_ws/src/apex_telemetry/apex_telemetry/estimation/: __init__.py  fixed_map_localizer_core.py  imu_lidar_planar_fusion_node.py  planar_fusion_core.py
APEX/ros2_ws/src/apex_telemetry/apex_telemetry/imu/: nano_accel_serial_node.py
APEX/ros2_ws/src/apex_telemetry/apex_telemetry/odometry/: kinematics_estimator_node.py
APEX/ros2_ws/src/apex_telemetry/apex_telemetry/perception/: curve_entry_path_planner_node.py  curve_window_detection.py  fixed_map_route_planner_node.py  lidar_scan_buffer.py  recognition_tour_planner_node.py  rplidar_publisher_node.py  trajectory_supervisor_node.py
APEX/ros2_ws/src/apex_telemetry/config/: apex_local_ekf.yaml  apex_local_imu_filter.yaml  apex_local_slam_toolbox.yaml  apex_params.yaml  apex_slam_toolbox.yaml
APEX/ros2_ws/src/apex_telemetry/launch/: apex_lidar_slam.launch.py  apex_local_odom_fusion.launch.py  apex_pipeline.launch.py
APEX/ros2_ws/src/apex_telemetry/resource/: apex_telemetry
APEX/ros2_ws/src/apex_telemetry/test/: test_actuation.py  test_recon_navigation.py
APEX/ros2_ws/src/voiture_system/: package.xml  setup.cfg  setup.py
APEX/ros2_ws/src/voiture_system/tools/: test_pipeline.py
APEX/ros2_ws/src/voiture_system/voiture_system/: ackermann_drive_node.py  ackermann_odometry_node.py  hardware_pwm.py  real_motor_driver.py  real_steering_driver.py  rplidar_publisher_node.py
APEXsim/: run_basic_track.sh
Lidar/: README.md  interfacelidar.py
docs/: 00_index.md  01_project_overview.md  02_repository_structure.md  03_installation_linux.md  04_installation_windows.md  05_quick_start.md  06_system_architecture.md  07_ros_architecture.md  08_simulation_gazebo.md  09_blue_vehicle_real_system.md  10_packages_and_modules.md  11_launch_files_and_execution_flows.md  12_topics_services_actions_parameters.md  13_data_and_runs.md  14_developer_guide.md  15_troubleshooting.md  16_known_limitations_and_legacy_parts.md  17_configuration_reference.md  18_mapping_and_recording_pipeline.md  19_hardware_interfaces.md  20_glossary_ros_terms.md  raspberry_legacy_vs_ros_audit_2026-03-20.md
full_soft/: .gitignore  charge_files_to_raspberry.sh
src/rc_sim_description/: CMakeLists.txt  package.xml
src/rc_sim_description/config/: slam_toolbox_sim.yaml  slam_toolbox_sim_ideal.yaml  slam_toolbox_sim_rf2o_ekf.yaml
src/rc_sim_description/data/runs/lap_manual_01/: ground_truth_latest_status.json  ground_truth_odom.csv  ground_truth_path.csv  ground_truth_status.jsonl  imu_raw.csv  odom_fused.csv  online_status.jsonl  run_metadata.json  run_summary.json  scan_index.csv
src/rc_sim_description/data/runs/lap_manual_01/offline_reconstruction/: reconstructed_path.csv  reconstruction_summary.json
src/rc_sim_description/data/runs/smoke_recorder_test/: ground_truth_latest_status.json  ground_truth_odom.csv  ground_truth_status.jsonl  run_metadata.json  run_summary.json
src/rc_sim_description/launch/: apex_sim.launch.py
src/rc_sim_description/rviz/: apex_manual_mapping_ideal.rviz  apex_manual_mapping_rf2o_ekf.rviz  apex_offline_submap_refiner.rviz
src/rc_sim_description/scripts/: apex_general_track_mapper.py  apex_ground_truth_node.py  apex_ground_truth_tf_bridge.py  apex_gz_vehicle_bridge.py  apex_offline_sensorfusion_map_publisher.py  apex_refined_sensorfusion_map_node.py  apex_scan_frame_adapter.py  apex_windows_gamepad_bridge_node.py  offline_submap_refiner.py  online_distance_field_seed_node.py  run_offline_lap_reconstruction.py
src/rc_sim_description/urdf/: rc_car.urdf.xacro
src/rc_sim_description/worlds/: narrowing_false_corridor.world
(+674 files in other folders)
