<?xml version="1.0"?>
<package format="3">
  <name>apex_telemetry</name>
  <version>0.1.0</version>
  <description>APEX telemetry pipeline: Arduino Nano IMU serial reader and kinematics estimator.</description>
  <maintainer email="todo@example.com">APEX Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
